Upgrade to Errai 4.0.0-SNAPSHOT, GWT 2.8.0-beta1, and Java 8.
* Fixes for ambiguous dependencies caused by new resolution
algorithm for concrete beans.
* Explicity enable alternatives.
* Update code using old bean manager API.
* Replace @TestMock with @Alternative