@@ -112,7 +112,7 @@
           <runTarget>index.html</runTarget>
 
           <!-- do not insert line breaks in this string; it breaks Windows compatibility -->
-          <extraJvmArgs>-Xmx1g -Xms756m -XX:MaxPermSize=256m</extraJvmArgs>
+          <extraJvmArgs>-Xmx1g -Xms756m</extraJvmArgs>
 
         </configuration>
         <executions>
